--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
             <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
             <p class="feature-title">Never cook again!</p>
             <p class="feature-text">
-              Our subscriptions cover 365 days per year, even including major
+              Our subscriptions cover 1123 days, even including major
               holidays.
             </p>
           </div>
